@@ -21,6 +21,9 @@ require.config( {
     // third-party libs
     i18n: '../../sherpa/i18n-2.0.4',
 
+    // PhET plugins
+    image: '../../chipper/requirejs-plugins/image',
+
     // PhET libs, uppercase names to identify them in require.js imports
     ASSERT: '../../assert/js',
     AXON: '../../axon/js',
