@@ -1,16 +1,8 @@
 {
   "name": "molarity",
   "version": "1.0.0-rc2",
-  "resourceDirs": "images",
   "phetLibs": "molarity assert axon dot joist kite nitroglycerin phet-core phetcommon scenery scenery-phet sun",
   "preload": "../sherpa/jquery-2.0.3.js ../sherpa/lodash-2.0.0.js ../sherpa/has.js ../sherpa/PxLoader.js ../sherpa/PxLoaderImage.js ../phetcommon/js/util/query-parameters.js ../phetcommon/js/util/check-assertions.js ../phetcommon/js/analytics/google-analytics.js",
-  "images": [
-    "images/beaker.png",
-    "images/reset_button_disabled.png",
-    "images/reset_button_down.png",
-    "images/reset_button_over.png",
-    "images/reset_button_up.png"
-    ],
   "license": "GPLv3",
   "devDependencies": {
     "grunt": "~0.4.1",
